--- a/WAD DEVELOPMENT/bootstrap/css/half-slider.css
+++ b/WAD DEVELOPMENT/bootstrap/css/half-slider.css
@@ -13,6 +13,7 @@ body {
 
 .carousel {
     height: 50%;
+    background:grey;
 }
 .carousel-caption1 {
   
@@ -40,7 +41,7 @@ body {
     margin-left:20%;
     margin-top:52px;
     width: 60%;
-    height: 70%;
+    height: 75%;
     background-position: center ;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -52,6 +53,6 @@ footer {
     margin: 50px 0;
 }
  #map {
-        width: 500px;
+        width: 100%;
         height: 400px;
       }
