--- a/WAD DEVELOPMENT/bootstrap/css/half-slider.css
+++ b/WAD DEVELOPMENT/bootstrap/css/half-slider.css
@@ -13,7 +13,7 @@ body {
 
 .carousel {
     height: 50%;
-    background:blue;
+    background:grey;
 }
 .carousel-caption1 {
   
@@ -41,7 +41,7 @@ body {
     margin-left:20%;
     margin-top:52px;
     width: 60%;
-    height: 75%;
+    height: 100%;
     background-position: center ;
     -webkit-background-size: cover;
     -moz-background-size: cover;
