--- a/WAD DEVELOPMENT/bootstrap/css/half-slider.css
+++ b/WAD DEVELOPMENT/bootstrap/css/half-slider.css
@@ -8,7 +8,9 @@ html,
 body {
     height: 100%;
 }
-
+.bcolour{
+    background-color:grey;
+}
 /* You can change the height of the carousel by changing the height in the class below. It is set to 50% by default, but can be any height! */
 
 .carousel {
