--- a/WAD DEVELOPMENT/bootstrap/css/half-slider.css
+++ b/WAD DEVELOPMENT/bootstrap/css/half-slider.css
@@ -15,10 +15,12 @@ body {
 
 .carousel {
     height: 50%;
-    background:grey;
+    width:78%;
+    margin-left:11%;
+    background: #f2f2f2;
 }
 .carousel-caption1 {
-  
+  color:black;
   position: absolute;
   right: 15%;
   bottom: 20px;
@@ -26,6 +28,7 @@ body {
   z-index: 10;
   padding-top: 20px;
   padding-bottom: 20px;
+  padding-left:20px;
   color: #fff;
   text-align: center;
   text-shadow: 0 1px 2px rgba(0, 0, 0, .6);
@@ -43,7 +46,7 @@ body {
     margin-left:20%;
     margin-top:52px;
     width: 60%;
-    height: 100%;
+    height: 76%;
     background-position: center ;
     -webkit-background-size: cover;
     -moz-background-size: cover;
