Working Jquery and Ajax Table

--- a/WAD DEVELOPMENT/bootstrap/css/half-slider.css
+++ b/WAD DEVELOPMENT/bootstrap/css/half-slider.css
@@ -68,3 +68,13 @@ footer {
     border:1px solid; 
     border-radius: 7px 7px 0px 0px;
 }
+hr { 
+    display: block;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+    margin-left: auto;
+    margin-right: auto;
+    border-style: inset;
+    border-width: 1px;
+    width:70%;
+}
