--- a/WAD DEVELOPMENT/bootstrap/css/half-slider.css
+++ b/WAD DEVELOPMENT/bootstrap/css/half-slider.css
@@ -7,6 +7,7 @@
 html,
 body {
     height: 100%;
+    background-color: #f2f2f2 ;
 }
 .bcolour{
     background-color:grey;
@@ -17,7 +18,7 @@ body {
     height: 50%;
     width:78%;
     margin-left:11%;
-    background: #f2f2f2;
+    background: #e6e6e6;
 }
 .carousel-caption1 {
   color:black;
